# TheFormats

./: CMakeLists.txt  README  README.md  progmi
components/: help_info.txt  version_info.txt
data/: version_info.txt
doc/: about.md  author.md  download.md  requirements.md
include/: binary_arithmetic.hpp  colors.hpp  convert.hpp  data.hpp  output.hpp
info/: version_info.txt
src/: binary_arithmetic.cpp  convert.cpp  data.cpp  main.cpp  output.cpp
src/binary_arithmetic/: binary_arithmetic.cpp
src/convert/: convert.cpp
src/data/: data.cpp
src/output/: output.cpp
